# AS-projekti

./: .gitignore  CMakeLists.txt  README  README.md
src/: CMakeLists.txt  Calibrate.h  Calibrator.h  CameraWrapper.h  CloudDB.h  CloudModel.h  Common.h  Config.h  DataTypes.h  DatabaseReader.h  FileHandler.h  Filter.h  Makefile  ModelRecorder.h  OpenNICamera.cc  OpenNICamera.h  Recognize.h  RecognizeResults.h  Register.h  ScannerGUI.h  Segment.h  Segmentor.h  SimulatorCamera.cc  SimulatorCamera.h  cmake_install.cmake
src/recognizer/: CMakeLists.txt  ObjectRecognizer.cc  Recognize.h  RecognizeResults.h  RecognizerGUI.h
src/scanner/: CMakeLists.txt  ObjectScanner.cc  ScannerGUI.h
test/: CMakeLists.txt  testdata01.cc  testmodelrecorder.cc  testregister.cc  tests.cc  testtablebinary.cc
