FILE (GLOB_RECURSE project_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
SET (project_MOC_HEADERS app.h)
SET (project_LIBS ${Boost_LIBRARIES} ${PCL_LIBRARIES} ${OPENNI_LIBRARIES})
SET (project_BIN ${PROJECT_NAME})

ADD_EXECUTABLE(test01 testdata01.cc)
TARGET_LINK_LIBRARIES(test01 ${project_LIBS} ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
SET_TARGET_PROPERTIES(test01 PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME test01 CLEAN_DIRECT_OUTPUT 1)

ADD_EXECUTABLE(tests tests.cc ../src/OpenNICamera.cc ../src/SimulatorCamera.cc)
TARGET_LINK_LIBRARIES(tests ${project_LIBS} ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
SET_TARGET_PROPERTIES(tests PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME tests CLEAN_DIRECT_OUTPUT 1)

ADD_EXECUTABLE(testregister testregister.cc)
TARGET_LINK_LIBRARIES(testregister ${project_LIBS} ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
SET_TARGET_PROPERTIES(testregister PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME testregister CLEAN_DIRECT_OUTPUT 1)

INSTALL(TARGETS test01 tests testregister DESTINATION bin)
